Updated The Project With Adding apiGateWay.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=64999
 spring.application.name=movie-service
 spring.data.mongodb.database=userdatabase1
-spring.data.mongodb.uri=mongodb://localhost:27017/
+spring.data.mongodb.uri=mongodb://mongoService:27017/userdatabase1
 server.error.include-message=always
 
