Registering Services With Eureka-Server.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.data.mongodb.database=userdatabase1
 spring.data.mongodb.uri=mongodb://mongoService:27017/userdatabase1
 server.error.include-message=always
 
+eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
